signup to db succesfull

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,15 +15,22 @@
         <a href="/login">Login</a>
         <a href="/signup">Sign up</a>
     </nav>
-    <form action="">
-
+    <form action="/signup" method="post">
         <!-- name,phone, location -- styles -->
+        <label for="name">Name</label> <br>
+        <input type="text" id="named" name="name"> <br>
+
 
         <label for="email">Email</label> <br>
-        <input type="email" id="email" name="email"> <br>
+        <input type="email" id="email" value="alb@gm.c" name="email"> <br>
+
+        <label for="phone">Phone</label> <br>
+        <input type="tel" id="phone" value="alb@gm.c" name="phone"> <br>
 
         <label for="password">Password</label> <br>
         <input type="password" id="password" name="password"> <br>
+        <label for="location">Location</label> <br>
+        <input type="text" id="location" name="location"> <br>
 
         <input type="submit" value="Log In">
     </form>
