--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,7 +23,16 @@
         <label for="password">Password</label> <br>
         <input type="password" id="password" name="password"> <br>
 
-        <input type="submit" value="Log In">
+        <%if(locals.errorMessage) {%>
+
+            <p style="color: orangered; font-size:20px">
+                <%=locals.errorMessage%>
+            </p>
+
+            <%}%>
+
+
+                <input type="submit" value="Log In">
     </form>
 
 
