--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -17,6 +17,8 @@
     </nav>
     <form action="/signup" method="post">
         <!-- name,phone, location -- styles -->
+        <label for="name">ID</label> <br>
+        <input type="number" id="named" name="id"> <br>
         <label for="name">Name</label> <br>
         <input type="text" id="named" name="name"> <br>
 
