--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,7 @@
         <a href="/signup">Sign up</a>
     </nav>
 
-    <form action="">
+    <form action="/login" method="post">
         <label for="email">Email</label> <br>
         <input type="email" id="email" name="email"> <br>
 
